force-app/main/default/objects/Service_Provided__c/Service_Provided__c.object-meta.xml
<CustomObject>
    <description>Records the various services that are provided on a given date.</description>
    <label>Service Provided</label>
    <nameField>
        <displayFormat>SP-{000}</displayFormat>
        <label>Service Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Provided</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>