force-app/main/default/objects/Service_Provided__c/fields/Childcare__c.field-meta.xml
<CustomField>
    <fullName>Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Childcare</label>
    <type>Checkbox</type>
</CustomField>