force-app/main/default/objects/Service_Provided__c/fields/Computer_Literacy__c.field-meta.xml
<CustomField>
    <fullName>Computer_Literacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer Literacy</label>
    <type>Checkbox</type>
</CustomField>