force-app/main/default/objects/Service_Provided__c/fields/Date_Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_Service_Provided__c</fullName>
    <label>Date Service Provided</label>
    <type>Date</type>
</CustomField>