force-app/main/default/objects/Service_Provided__c/fields/Direct_Service_Other__c.field-meta.xml
<CustomField>
    <fullName>Direct_Service_Other__c</fullName>
    <label>Direct Service Other</label>
    <type>TextArea</type>
</CustomField>