force-app/main/default/objects/Service_Provided__c/fields/Domestic_Violence__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Violence</label>
    <type>Checkbox</type>
</CustomField>