force-app/main/default/objects/Service_Provided__c/fields/Employment_Services__c.field-meta.xml
<CustomField>
    <fullName>Employment_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Services</label>
    <type>Checkbox</type>
</CustomField>