force-app/main/default/objects/Service_Provided__c/fields/Food_Pantry__c.field-meta.xml
<CustomField>
    <fullName>Food_Pantry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Pantry</label>
    <type>Checkbox</type>
</CustomField>