force-app/main/default/objects/Service_Provided__c/fields/Food_Stamp_Application__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamp_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Stamp Application</label>
    <type>Checkbox</type>
</CustomField>