force-app/main/default/objects/Service_Provided__c/fields/Homelessness_Prevention_Program_Grant__c.field-meta.xml
<CustomField>
    <fullName>Homelessness_Prevention_Program_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homelessness Prevention Program Grant</label>
    <type>Checkbox</type>
</CustomField>