force-app/main/default/objects/Service_Provided__c/fields/Housing_Wait_List__c.field-meta.xml
<CustomField>
    <fullName>Housing_Wait_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Wait List</label>
    <type>Checkbox</type>
</CustomField>