force-app/main/default/objects/Service_Provided__c/fields/HPP_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>HPP_Grant_Amount__c</fullName>
    <label>HPP Grant Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>