force-app/main/default/objects/Service_Provided__c/fields/HPP_Grant_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HPP_Grant_Approval_Date__c</fullName>
    <label>HPP Grant Approval Date</label>
    <type>Date</type>
</CustomField>