force-app/main/default/objects/Service_Provided__c/fields/HPP_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>HPP_Grant_Type__c</fullName>
    <label>HPP_Grant_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moving Expenses</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>