force-app/main/default/objects/Service_Provided__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal</label>
    <type>Checkbox</type>
</CustomField>