force-app/main/default/objects/Service_Provided__c/fields/Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mental Health</label>
    <type>Checkbox</type>
</CustomField>