force-app/main/default/objects/Service_Provided__c/fields/RAFT__c.field-meta.xml
<CustomField>
    <fullName>RAFT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAFT</label>
    <type>Checkbox</type>
</CustomField>