force-app/main/default/objects/Service_Provided__c/fields/Referral_Service_Other__c.field-meta.xml
<CustomField>
    <fullName>Referral_Service_Other__c</fullName>
    <label>Referral Service Other</label>
    <type>TextArea</type>
</CustomField>