force-app/main/default/objects/Service_Provided__c/fields/Senior__c.field-meta.xml
<CustomField>
    <fullName>Senior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior</label>
    <type>Checkbox</type>
</CustomField>