force-app/main/default/objects/Service_Provided__c/fields/SSDI_or_SSI_Application__c.field-meta.xml
<CustomField>
    <fullName>SSDI_or_SSI_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSDI or SSI Application</label>
    <type>Checkbox</type>
</CustomField>