force-app/main/default/objects/Service_Provided__c/fields/Youth__c.field-meta.xml
<CustomField>
    <fullName>Youth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth</label>
    <type>Checkbox</type>
</CustomField>